// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SingleSelectableRows one selectable row and one non-selectable row 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  screenReaderUpdateOnSelected={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelectable={true}
    isSelected={false}
    key="PERSON_0"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
  <TableRow
    isSelectable={false}
    isSelected={false}
    key="PERSON_1"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
</SelectableTableRows>
`;

exports[`should render SingleSelectableRows tag 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  screenReaderUpdateOnSelected={[Function]}
  selectedIndexes={
    Array [
      1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelectable={true}
    isSelected={false}
    key="PERSON_0"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
  <TableRow
    className="PERSON_1"
    isSelectable={true}
    isSelected={true}
    key="PERSON_1"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
</SelectableTableRows>
`;

exports[`should render SingleSelectableRows with no rows 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  screenReaderUpdateOnSelected={[Function]}
  selectedIndexes={
    Array [
      null,
    ]
  }
/>
`;

exports[`should render SingleSelectableRows with one row 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  screenReaderUpdateOnSelected={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelectable={true}
    isSelected={false}
    key="PERSON_0"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
</SelectableTableRows>
`;

exports[`should select an row 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  screenReaderUpdateOnSelected={[Function]}
  selectedIndexes={
    Array [
      1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelectable={true}
    isSelected={false}
    key="PERSON_0"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
  <TableRow
    className="PERSON_1"
    isSelectable={true}
    isSelected={true}
    key="PERSON_1"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
</SelectableTableRows>
`;

exports[`should select an row 2`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  screenReaderUpdateOnSelected={[Function]}
  selectedIndexes={
    Array [
      1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelectable={true}
    isSelected={false}
    key="PERSON_0"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
  <TableRow
    className="PERSON_1"
    isSelectable={true}
    isSelected={true}
    key="PERSON_1"
  >
    <TableCell
      className="NAME"
      content="John Smith"
      key="NAME"
    />
    <TableCell
      className="ADDRESS"
      content="123 Adams Drive"
      key="ADDRESS"
    />
    <TableCell
      className="PHONE_NUMBER"
      content="111-222-3333"
      key="PHONE_NUMBER"
    />
  </TableRow>
</SelectableTableRows>
`;
